Refactoring for Better code for HashTagRepositoryTest